--- a/Script/Setting/Language/en-us.json
+++ b/Script/Setting/Language/en-us.json
@@ -426,14 +426,14 @@
     "popcap.rsb.pack.invalid_packet_composite": "Invalid packet, the packet should be composite, however it's value is \"false\", expected \"true\" in subgroup",
     "popcap.rsb.pack.invalid_ptx_info_size": "Invalid RSB PTX Info Size, expected to be 0x10, 0x14 or 0x18, received",
     "popcap.rsb.pack.invalid_rsb_version": "Invalid RSB version, expected version to be 3 or 4, received",
-    "popcap.rsb.pack_custom": "PopCap RSB: Build Project",
-    "popcap.rsb.pack_custom.iv": "IV",
-    "popcap.rsb.pack_custom.key": "Key",
-    "popcap.rsb.pack_custom.manifest_compress": "Manifest Compression",
-    "popcap.rsb.pack_custom.packages_compress": "Packages Compression",
-    "popcap.rsb.pack_custom.packages_does_not_use": "Packages does not use in packages flag",
-    "popcap.rsb.pack_custom.total_json_count": "Total JSON will be encoded",
-    "popcap.rsb.pack_custom.total_rton_count": "Total RTON in Packages",
+    "popcap.rsb.build_project": "PopCap RSB: Build Project",
+    "popcap.rsb.build_project.iv": "IV",
+    "popcap.rsb.build_project.key": "Key",
+    "popcap.rsb.build_project.manifest_compress": "Manifest Compression",
+    "popcap.rsb.build_project.packages_compress": "Packages Compression",
+    "popcap.rsb.build_project.packages_does_not_use": "Packages does not use in packages flag",
+    "popcap.rsb.build_project.total_json_count": "Total JSON will be encoded",
+    "popcap.rsb.build_project.total_rton_count": "Total RTON in Packages",
     "popcap.rsb.pack_for_modding": "PopCap RSB: Pack for Modding",
     "popcap.rsb.pack_for_modding.converted_res_info_to_resource_group": "Res-Info is converted to Resource-Group",
     "popcap.rsb.pack_for_modding.converted_resource_group_to_res_info": "Resource-Group is converted to Res-Info",
@@ -472,10 +472,10 @@
     "popcap.rsb.unpack_cipher.cannot_find_subgroup_index": "Cannot find subgroup index {}",
     "popcap.rsb.unpack_cipher.invalid_magic_header": "Invalid magic header",
     "popcap.rsb.unpack_cipher.key": "Key",
-    "popcap.rsb.unpack_custom": "PopCap RSB: Init Project",
-    "popcap.rsb.unpack_custom.only_high_resolution": "Only High Resolution",
-    "popcap.rsb.unpack_custom.resolution": "Texture Additional Resize",
-    "popcap.rsb.unpack_custom.resolution_additional": "Texture resolution will be added",
+    "popcap.rsb.init_project": "PopCap RSB: Init Project",
+    "popcap.rsb.init_project.only_high_resolution": "Only High Resolution",
+    "popcap.rsb.init_project.resolution": "Texture Additional Resize",
+    "popcap.rsb.init_project.resolution_additional": "Texture resolution will be added",
     "popcap.rsb.unpack_for_modding": "PopCap RSB: Unpack for Modding",
     "popcap.rsb.unpack_for_modding.decode_newton_file": "Found NEWTON file, decoding NEWTON file",
     "popcap.rsb.unpack_for_modding.decode_rton_file": "Found RTON file, decode RTON file",
@@ -504,10 +504,10 @@
     "popcap.rsb.project.invalid_res_type": "Invalid resource type",
     "popcap.rsb.project.json_count_mismatch": "JSON has not been counted",
     "popcap.rsb.project.rton_count_mismatch": "RTON has not been counted",
-    "popcap.rsb.watch": "PopCap RSB: Trace Project",
-    "popcap.rsb.watch.delete": "Delete",
-    "popcap.rsb.watch.copying_root": "Copying root directory, please do not delete current directory...",
-    "popcap.rsb.watch.update": "Update",
+    "popcap.rsb.trace": "PopCap RSB: Trace Project",
+    "popcap.rsb.trace.delete": "Delete",
+    "popcap.rsb.trace.copying_root": "Copying root directory, please do not delete current directory...",
+    "popcap.rsb.trace.update": "Update",
     "popcap.rsg.invalid_rsg_compression": "Invalid RSG compression, got: {} but expected value to be 0, 1, 2 or 3",
     "popcap.rsg.invalid_version": "Invalid RSG version, got: {} but expected version to be 1, 3 or 4",
     "popcap.rsg.pack": "PopCap RSG: Pack",
@@ -687,5 +687,9 @@
     "zlib.compress.invalid_level": "Invalid Zlib compression level, expected level from 0 to 9",
     "zlib.uncompress.failed": "Zlib uncompress failed",
     "popcap.animation.add_library": "PopCap Animation: Add library content",
-    "popcap.rsb.to_ios": "PopCap RSB: Convert Android RSB to iOS RSB"
+    "popcap.rsb.to_ios": "PopCap RSB: Convert Android RSB to iOS RSB",
+    "popcap.rsb.convert_platform": "PopCap RSB: Platform Convert",
+    "popcap.rsb.convert_platform.platform_convert": "Platform convert",
+    "popcap.rsb.convert_platform.convert_android_to_ios": "Android to iOS",
+    "popcap.rsb.convert_platform.convert_ios_to_android": "iOS to Android"
 }
