--- a/Script/Setting/Language/vi-vn.json
+++ b/Script/Setting/Language/vi-vn.json
@@ -426,14 +426,14 @@
     "popcap.rsb.pack.invalid_packet_composite": "Packet không hợp lệ, gói phải là composite, tuy nhiên giá trị của nó là \"false\", dự kiến \"true\" trong subgroup",
     "popcap.rsb.pack.invalid_ptx_info_size": "Kích thước thông tin PTX RSB không hợp lệ, dự kiến là 0x10, 0x14 hoặc 0x18, nhận được",
     "popcap.rsb.pack.invalid_rsb_version": "Phiên bản RSB không hợp lệ, phiên bản dự kiến là 3 hoặc 4, nhận được",
-    "popcap.rsb.pack_custom": "PopCap RSB: Xây dựng dự án",
-    "popcap.rsb.pack_custom.iv": "IV",
-    "popcap.rsb.pack_custom.key": "Chìa khoá",
-    "popcap.rsb.pack_custom.manifest_compress": "Nén Manifest",
-    "popcap.rsb.pack_custom.packages_compress": "Nén Packages",
-    "popcap.rsb.pack_custom.packages_does_not_use": "Packages không sử dụng cờ Packages",
-    "popcap.rsb.pack_custom.total_json_count": "Tổng số JSON sẽ được mã hoá",
-    "popcap.rsb.pack_custom.total_rton_count": "Tổng số RTON trong Packages",
+    "popcap.rsb.build_project": "PopCap RSB: Xây dựng dự án",
+    "popcap.rsb.build_project.iv": "IV",
+    "popcap.rsb.build_project.key": "Chìa khoá",
+    "popcap.rsb.build_project.manifest_compress": "Nén Manifest",
+    "popcap.rsb.build_project.packages_compress": "Nén Packages",
+    "popcap.rsb.build_project.packages_does_not_use": "Packages không sử dụng cờ Packages",
+    "popcap.rsb.build_project.total_json_count": "Tổng số JSON sẽ được mã hoá",
+    "popcap.rsb.build_project.total_rton_count": "Tổng số RTON trong Packages",
     "popcap.rsb.pack_for_modding": "PopCap RSB: Đóng gói cho việc Sửa đổi",
     "popcap.rsb.pack_for_modding.converted_res_info_to_resource_group": "Đã chuyển đổi Res-Info thành Resource-Group",
     "popcap.rsb.pack_for_modding.converted_resource_group_to_res_info": "Đã chuyển đổi Resource-Group thành Res-Info",
@@ -472,10 +472,10 @@
     "popcap.rsb.unpack_cipher.cannot_find_subgroup_index": "Không thể tìm thấy chỉ mục subgroup {}",
     "popcap.rsb.unpack_cipher.invalid_magic_header": "Tiêu đề magic không hợp lệ",
     "popcap.rsb.unpack_cipher.key": "Chìa khoá",
-    "popcap.rsb.unpack_custom": "PopCap RSB: Khởi tạo dự án",
-    "popcap.rsb.unpack_custom.only_high_resolution": "Chỉ Độ phân giải Cao",
-    "popcap.rsb.unpack_custom.resolution": "Thay đổi kích thước Texture Bổ sung",
-    "popcap.rsb.unpack_custom.resolution_additional": "Độ phân giải texture sẽ được thêm",
+    "popcap.rsb.init_project": "PopCap RSB: Khởi tạo dự án",
+    "popcap.rsb.init_project.only_high_resolution": "Chỉ Độ phân giải Cao",
+    "popcap.rsb.init_project.resolution": "Thay đổi kích thước Texture Bổ sung",
+    "popcap.rsb.init_project.resolution_additional": "Độ phân giải texture sẽ được thêm",
     "popcap.rsb.unpack_for_modding": "PopCap RSB: Mở gói cho việc Sửa đổi",
     "popcap.rsb.unpack_for_modding.decode_newton_file": "Tìm thấy tệp NEWTON, đang giải mã tệp NEWTON",
     "popcap.rsb.unpack_for_modding.decode_rton_file": "Tìm thấy tệp RTON, giải mã tệp RTON",
@@ -504,10 +504,10 @@
     "popcap.rsb.project.invalid_res_type": "Kiểu resource không hợp lệ",
     "popcap.rsb.project.json_count_mismatch": "JSON chưa được tính",
     "popcap.rsb.project.rton_count_mismatch": "RTON chưa được tính",
-    "popcap.rsb.watch": "PopCap RSB: Truy vết Dự án",
-    "popcap.rsb.watch.delete": "Xoá",
-    "popcap.rsb.watch.copying_root": "Đang sao chép thư mục gốc, vui lòng không xóa thư mục hiện tại...",
-    "popcap.rsb.watch.update": "Cập nhật",
+    "popcap.rsb.trace": "PopCap RSB: Truy vết Dự án",
+    "popcap.rsb.trace.delete": "Xoá",
+    "popcap.rsb.trace.copying_root": "Đang sao chép thư mục gốc, vui lòng không xóa thư mục hiện tại...",
+    "popcap.rsb.trace.update": "Cập nhật",
     "popcap.rsg.invalid_rsg_compression": "Nén RSG không hợp lệ, nhận được: {} nhưng giá trị dự kiến là 0, 1, 2 hoặc 3",
     "popcap.rsg.invalid_version": "Phiên bản RSG không hợp lệ, nhận được: {} nhưng phiên bản dự kiến là 1, 3 hoặc 4",
     "popcap.rsg.pack": "PopCap RSG: Đóng gói",
@@ -687,5 +687,9 @@
     "zlib.compress.invalid_level": "Cấp độ nén Zlib không hợp lệ, cấp độ dự kiến từ 0 đến 9",
     "zlib.uncompress.failed": "Giải nén Zlib thất bại",
     "popcap.animation.add_library": "PopCap Animation: Thêm thư viện",
-    "popcap.rsb.to_ios": "PopCap RSB: Chuyển Android RSB sang iOS RSB"
+    "popcap.rsb.to_ios": "PopCap RSB: Chuyển Android RSB sang iOS RSB",
+    "popcap.rsb.convert_platform": "PopCap RSB: Chuyển đổi nền tảng",
+    "popcap.rsb.convert_platform.platform_convert": "Nền tảng chuyển đổi",
+    "popcap.rsb.convert_platform.convert_android_to_ios": "Android sang iOS",
+    "popcap.rsb.convert_platform.convert_ios_to_android": "iOS sang Android"
 }
