--- a/Script/Setting/Language/es-es.json
+++ b/Script/Setting/Language/es-es.json
@@ -426,14 +426,14 @@
     "popcap.rsb.pack.invalid_packet_composite": "packet no válido, el packet debería ser composite, pero su valor es \"false\", se esperaba \"true\" en subgrupo",
     "popcap.rsb.pack.invalid_ptx_info_size": "Información de tamaño de PTX de RSB no válido, se esperaba 0x10, 0x14 o 0x18, se recibió",
     "popcap.rsb.pack.invalid_rsb_version": "Versión de RSB no válida, se esperaba 3 o 4, se recibió",
-    "popcap.rsb.pack_custom": "PopCap RSB: Crear Proyecto",
-    "popcap.rsb.pack_custom.iv": "IV",
-    "popcap.rsb.pack_custom.key": "Key",
-    "popcap.rsb.pack_custom.manifest_compress": "Compresión de Manifest",
-    "popcap.rsb.pack_custom.packages_compress": "Compresión de Packages",
-    "popcap.rsb.pack_custom.packages_does_not_use": "Packages no usa el flag de packages",
-    "popcap.rsb.pack_custom.total_json_count": "Todos los JSON serán codificados",
-    "popcap.rsb.pack_custom.total_rton_count": "Total de RTON en Packages",
+    "popcap.rsb.build_project": "PopCap RSB: Crear Proyecto",
+    "popcap.rsb.build_project.iv": "IV",
+    "popcap.rsb.build_project.key": "Key",
+    "popcap.rsb.build_project.manifest_compress": "Compresión de Manifest",
+    "popcap.rsb.build_project.packages_compress": "Compresión de Packages",
+    "popcap.rsb.build_project.packages_does_not_use": "Packages no usa el flag de packages",
+    "popcap.rsb.build_project.total_json_count": "Todos los JSON serán codificados",
+    "popcap.rsb.build_project.total_rton_count": "Total de RTON en Packages",
     "popcap.rsb.pack_for_modding": "PopCap RSB: Empacar para Modding",
     "popcap.rsb.pack_for_modding.converted_res_info_to_resource_group": "Res-Info es convertido en Resource-Group",
     "popcap.rsb.pack_for_modding.converted_resource_group_to_res_info": "Resource-Group es convertido en Res-Info",
@@ -472,10 +472,10 @@
     "popcap.rsb.unpack_cipher.cannot_find_subgroup_index": "No se pudo encontrar subgrupo de índice {}",
     "popcap.rsb.unpack_cipher.invalid_magic_header": "Magic de header no válido",
     "popcap.rsb.unpack_cipher.key": "Key",
-    "popcap.rsb.unpack_custom": "PopCap RSB: Iniciar Proyecto",
-    "popcap.rsb.unpack_custom.only_high_resolution": "Solo resolución alta",
-    "popcap.rsb.unpack_custom.resolution": "Cambio de tamño de textura adicional",
-    "popcap.rsb.unpack_custom.resolution_additional": "La resolución de textura será agregada",
+    "popcap.rsb.init_project": "PopCap RSB: Iniciar Proyecto",
+    "popcap.rsb.init_project.only_high_resolution": "Solo resolución alta",
+    "popcap.rsb.init_project.resolution": "Cambio de tamño de textura adicional",
+    "popcap.rsb.init_project.resolution_additional": "La resolución de textura será agregada",
     "popcap.rsb.unpack_for_modding": "PopCap RSB: Desempacar para Modding",
     "popcap.rsb.unpack_for_modding.decode_newton_file": "Se encontró archivo NEWTON, decodificando archivo NEWTON",
     "popcap.rsb.unpack_for_modding.decode_rton_file": "Se encontró archivo RTON, decodificando archivo RTON",
@@ -504,10 +504,10 @@
     "popcap.rsb.project.invalid_res_type": "Tipo de recurso inválido",
     "popcap.rsb.project.json_count_mismatch": "JSON no ha sido contado",
     "popcap.rsb.project.rton_count_mismatch": "RTON no ha sido contado",
-    "popcap.rsb.watch": "PopCap RSB: Vigilar Proyecto",
-    "popcap.rsb.watch.delete": "Eliminar",
-    "popcap.rsb.watch.copying_root": "Copiando raíz de directorio, no elimine el directorio actual...",
-    "popcap.rsb.watch.update": "Actualizar",
+    "popcap.rsb.trace": "PopCap RSB: Vigilar Proyecto",
+    "popcap.rsb.trace.delete": "Eliminar",
+    "popcap.rsb.trace.copying_root": "Copiando raíz de directorio, no elimine el directorio actual...",
+    "popcap.rsb.trace.update": "Actualizar",
     "popcap.rsg.invalid_rsg_compression": "Compresión RSG no válida, se obtuvo: {} pero se esperaba 0, 1, 2 o 3",
     "popcap.rsg.invalid_version": "Versión de RSG no válida, se obtuvo: {} pero se esperaba 1, 3 o 4",
     "popcap.rsg.pack": "PopCap RSG: Empacar",
@@ -687,5 +687,9 @@
     "zlib.compress.invalid_level": "Nivel de compresión Zlib no válido, se esperaba entre 0 y 9",
     "zlib.uncompress.failed": "Error al descomprimir Zlib",
     "popcap.animation.add_library": "PopCap Animation: Añadir contenido al library",
-    "popcap.rsb.to_ios": "PopCap RSB: Convertir RSB de Android a RSB de iOS"
+    "popcap.rsb.to_ios": "PopCap RSB: Convertir RSB de Android a RSB de iOS",
+    "popcap.rsb.convert_platform": "PopCap RSB: Plataforma Convertir",
+    "popcap.rsb.convert_platform.platform_convert": "Plataforma convertir",
+    "popcap.rsb.convert_platform.convert_android_to_ios": "De Android a iOS",
+    "popcap.rsb.convert_platform.convert_ios_to_android": "De iOS a Android"
 }
