--- a/Modding/lib/l10n/app_en.arb
+++ b/Modding/lib/l10n/app_en.arb
@@ -4,6 +4,7 @@
     "en": "English",
     "vi": "Vietnamese",
     "es": "Spanish",
+    "ru": "Russian",
     "not_specified": "Not specified",
     "default_setting": "Default setting",
     "theme": "Theme",
