--- a/Modding/lib/l10n/app_es.arb
+++ b/Modding/lib/l10n/app_es.arb
@@ -4,6 +4,7 @@
     "en": "English",
     "vi": "Vietnamese",
     "es": "Spanish",
+    "ru": "Russian",
     "not_specified": "No especificado",
     "default_setting": "Configuración por defecto",
     "theme": "Tema",
