--- a/Modding/lib/l10n/app_vi.arb
+++ b/Modding/lib/l10n/app_vi.arb
@@ -4,6 +4,7 @@
     "en": "Tiếng Anh",
     "vi": "Tiếng Việt",
     "es": "Tiếng Tây Ban Nha",
+    "ru": "Tiếng Nga",
     "not_specified": "Chưa cung cấp",
     "default_setting": "Cài đặt mặc định",
     "theme": "Chủ đề",
