Finalize Russian language for Sen GUI (hopefully)

--- a/Modding/lib/l10n/app_ru.arb
+++ b/Modding/lib/l10n/app_ru.arb
@@ -4,7 +4,7 @@
     "ru": "Русский",
     "en": "Английский",
     "vi": "Вьетнамский",
-    "es": "Испаский",
+    "es": "Испанский",
     "not_specified": "Не указано",
     "default_setting": "По умолчанию",
     "theme": "Тема",
@@ -13,10 +13,10 @@
     "application_setting": "Настройки приложения",
     "send_notification": "Уведомления",
     "storage_permission": "Память",
-    "granted": "Разрешено",
-    "denied": "Не выдано",
+    "granted": "Разрешение выдано",
+    "denied": "Разрешение не выдано",
     "toolchain": "Папка приложения",
-    "upload_directory": "Папка для загрузки",
+    "upload_directory": "Выбрать папку",
     "enable": "Включить",
     "disable": "Отключить",
     "okay": "ОК",
@@ -30,7 +30,7 @@
     "shell_description": "Shell используется для обработки и изменения файлов",
     "method_picker": "Выбор метода",
     "method_picker_description": "Выберите нужный вам метод из категорий методов",
-    "js_execute": "Выполнение скрипта JS",
+    "js_execute": "Выполнение скриптов JS",
     "js_execute_description": "Выполните один из встроенных скриптов JS",
     "animation_viewer": "Просмотр анимаций",
     "animation_viewer_description": "Здесь вы можете посмотреть анимации выбрав нужный файл",
@@ -40,13 +40,13 @@
     "yes": "Да",
     "no": "Нет",
     "elapsed_time": "Время выполнения",
-    "upload_file": "Загрузить файл",
+    "upload_file": "Выбрать файл",
     "recent_files": "Недавние файлы",
     "cancel": "Отмена",
     "invalid_request": "Неверный запрос",
     "shell_request_behavior": "Shell не может быть закрыт во время выполнения операции",
     "android_request": "Запрос от Android",
-    "android_storage_access_permission_required": "Для чтения и записи файлов приложению необходимы разрешения на управление памятью устройства",
+    "android_storage_access_permission_required": "Для чтения и записи файлов приложению необходимо разрешение на управление памятью устройства",
     "go_to_settings": "Перейти к настройкам",
     "shell_has_finished": "Shell завершил выполнение операции, возвращаемся к приложению!",
     "use": "Использовать",
@@ -58,7 +58,7 @@
     "media": "Медиа",
     "sprite": "Спрайт",
     "image": "Изображение",
-    "upload_media": "Загрузить медиа",
-    "drop_file_to_upload": "Перетащите файл для загрузки",
-    "upload_file_to_continue": "Загрузите файл для продолжения..."
+    "upload_media": "Выбрать медиа",
+    "drop_file_to_upload": "Перетащите файл для его загрузки",
+    "upload_file_to_continue": "Выберите файл для продолжения..."
 }
