--- a/Script/Setting/Language/en-us.json
+++ b/Script/Setting/Language/en-us.json
@@ -701,9 +701,12 @@
     "popcap.animation.to_apng.height": "Frame height",
     "popcap.animation.to_apng.total_frame": "Total frames",
     "popcap.animation.add_library.image_posix_for_id": "Image posix for id",
+    "popcap.animation.add_library.sprite_name": "Sprite name",
+    "popcap.animation.add_library.input_png_path": "Input png path (can be directory)",
     "popcap.animation.add_library.generate_sprite": "Generate sprite",
     "argument_must_be_list_of_string": "argument must be array of string",
     "total_n_files_are_executed": "Total {} files are executed!",
     "wwise.bnk.decode.invalid_magic": "Invalid BNK magic",
-    "wwise.bnk.decode.invalid_version": "Invalid BNK version"
+    "wwise.bnk.decode.invalid_version": "Invalid BNK version",
+    "file_size_is_bigger_than_data_stream_view": "File size is bigger than size of DataStreamView"
 }
