--- a/Script/Setting/Language/en-us.json
+++ b/Script/Setting/Language/en-us.json
@@ -549,12 +549,12 @@
     "popcap.zlib.uncompress.mismatch_zlib_magic": "Mismatch Zlib magic, should begin with",
     "popcap.zlib.uncompress.use_64_bit_variant": "Use 64-bit variant",
     "process": "process",
-    "pvz2.custom.scg.animation_split_label": "Animation Split Label",
-    "pvz2.custom.scg.decode": "PvZ2 Sen-Composite-Group: Decode",
-    "pvz2.custom.scg.decode.generic": "Decode Method",
-    "pvz2.custom.scg.enable_debug": "Enable Debug",
-    "pvz2.custom.scg.encode": "PvZ2 Sen-Composite-Group: Encode",
-    "pvz2.custom.scg.encode.generic": "Encode Method",
+    "pvz2.scg.animation_split_label": "Animation Split Label",
+    "pvz2.scg.decode": "PvZ2 Sen-Composite-Group: Decode",
+    "pvz2.scg.decode.generic": "Decode Method",
+    "pvz2.scg.enable_debug": "Enable Debug",
+    "pvz2.scg.encode": "PvZ2 Sen-Composite-Group: Encode",
+    "pvz2.scg.encode.generic": "Encode Method",
     "pvz2.project.compile": "PvZ 2 Project: Compile",
     "pvz2.project.create": "PvZ 2 Project: Create",
     "pvz2.scg.general_cannot_cotain_image": "SCG composite is false, so it cannot contain \"Image\" type",
@@ -709,5 +709,10 @@
     "wwise.bnk.decode.invalid_magic": "Invalid BNK magic",
     "wwise.bnk.decode.invalid_version": "Invalid BNK version",
     "file_size_is_bigger_than_data_stream_view": "File size is bigger than size of DataStreamView",
-    "image_is_broken": "The provided file is not an valid image"
+    "image_is_broken": "The provided file is not an valid image",
+    "file": "File",
+    "directory": "Directory",
+    "input_type": "Input type",
+    "input_number_to_process_batch_function": "Input number to process batch function",
+    "input_directory": "Input directory"
 }
