--- a/Script/Setting/Language/es-es.json
+++ b/Script/Setting/Language/es-es.json
@@ -549,12 +549,12 @@
     "popcap.zlib.uncompress.mismatch_zlib_magic": "Magic de Zlib incorrecto, debería empezar con",
     "popcap.zlib.uncompress.use_64_bit_variant": "Usar variante 64-bit",
     "process": "proceso",
-    "pvz2.custom.scg.animation_split_label": "Dividir labels de la animación",
-    "pvz2.custom.scg.decode": "PvZ2 Sen-Composite-Group: Decodificar",
-    "pvz2.custom.scg.decode.generic": "Método de decodificación",
-    "pvz2.custom.scg.enable_debug": "Activar Debug",
-    "pvz2.custom.scg.encode": "PvZ2 Sen-Composite-Group: Codificar",
-    "pvz2.custom.scg.encode.generic": "Método de codificación",
+    "pvz2.scg.animation_split_label": "Dividir labels de la animación",
+    "pvz2.scg.decode": "PvZ2 Sen-Composite-Group: Decodificar",
+    "pvz2.scg.decode.generic": "Método de decodificación",
+    "pvz2.scg.enable_debug": "Activar Debug",
+    "pvz2.scg.encode": "PvZ2 Sen-Composite-Group: Codificar",
+    "pvz2.scg.encode.generic": "Método de codificación",
     "pvz2.project.compile": "PvZ 2 Proyecto: Compilar",
     "pvz2.project.create": "PvZ 2 Proyecto: Crear",
     "pvz2.scg.general_cannot_cotain_image": "Composite de SCG es falso, por lo que no tiene tipo \"Image\"",
@@ -709,5 +709,10 @@
     "wwise.bnk.decode.invalid_magic": "Invalid BNK magic",
     "wwise.bnk.decode.invalid_version": "Invalid BNK version",
     "file_size_is_bigger_than_data_stream_view": "File size is bigger than size of DataStreamView",
-    "image_is_broken": "The provided file is not an valid image"
+    "image_is_broken": "The provided file is not an valid image",
+    "file": "File",
+    "directory": "Directory",
+    "input_type": "Input type",
+    "input_number_to_process_batch_function": "Input number to process batch function",
+    "input_directory": "Input directory"
 }
