--- a/Script/Setting/Language/vi-vn.json
+++ b/Script/Setting/Language/vi-vn.json
@@ -549,12 +549,12 @@
     "popcap.zlib.uncompress.mismatch_zlib_magic": "Magic Zlib magic không khớp, nên bắt đầu bằng",
     "popcap.zlib.uncompress.use_64_bit_variant": "Sử dụng biến thể 64-bit",
     "process": "tiến trình",
-    "pvz2.custom.scg.animation_split_label": "Label Tách Hoạt ảnh",
-    "pvz2.custom.scg.decode": "PvZ 2 Sen-Composite-Group: Giải mã",
-    "pvz2.custom.scg.decode.generic": "Phương thức Giải mã",
-    "pvz2.custom.scg.enable_debug": "Bật Gỡ lỗi",
-    "pvz2.custom.scg.encode": "PvZ 2 Sen-Composite-Group: Mã hoá",
-    "pvz2.custom.scg.encode.generic": "Phương thức Mã hoá",
+    "pvz2.scg.animation_split_label": "Label Tách Hoạt ảnh",
+    "pvz2.scg.decode": "PvZ 2 Sen-Composite-Group: Giải mã",
+    "pvz2.scg.decode.generic": "Phương thức Giải mã",
+    "pvz2.scg.enable_debug": "Bật Gỡ lỗi",
+    "pvz2.scg.encode": "PvZ 2 Sen-Composite-Group: Mã hoá",
+    "pvz2.scg.encode.generic": "Phương thức Mã hoá",
     "pvz2.project.compile": "Dự án PvZ 2: Biên dịch",
     "pvz2.project.create": "Dựi án PvZ 2: Tạo",
     "pvz2.scg.general_cannot_cotain_image": "Composite SCG bị sai, do đó nó không thể chứa loại \"Image\"",
@@ -709,5 +709,10 @@
     "wwise.bnk.decode.invalid_magic": "Invalid BNK magic",
     "wwise.bnk.decode.invalid_version": "Invalid BNK version",
     "file_size_is_bigger_than_data_stream_view": "File size is bigger than size of DataStreamView",
-    "image_is_broken": "The provided file is not an valid image"
+    "image_is_broken": "The provided file is not an valid image",
+    "file": "File",
+    "directory": "Directory",
+    "input_type": "Input type",
+    "input_number_to_process_batch_function": "Input number to process batch function",
+    "input_directory": "Input directory"
 }
