--- a/Modding/lib/l10n/app_ru.arb
+++ b/Modding/lib/l10n/app_ru.arb
@@ -77,5 +77,27 @@
     "map_editor_vertical_view": "Vertical View",
     "save_file": "Save file",
     "map_cannot_be_loaded": "Map cannot be loaded",
-    "map_editor_description": "Through Map Editor, edit your actual world map"
+    "map_editor_description": "Through Map Editor, edit your actual world map",
+    "regular_wave": "Basic Wave",
+    "storm_event": "Storm Event",
+    "low_tide": "Low Tide",
+    "sandstorm": "Sandstorm",
+    "snowstorm": "Snowstorm",
+    "entry": "Entry",
+    "column_start": "Column Start",
+    "column_end": "Column End",
+    "group_size": "Group Size",
+    "delay_between_groups": "Delay between groups",
+    "additional_plantfood": "Additional plantfood",
+    "pick_a_zombie": "Pick a zombie",
+    "save": "Save",
+    "zombie": "Zombie",
+    "wave": "Wave",
+    "plant": "Plant",
+    "grid_item": "Grid Item",
+    "expand": "Expand",
+    "edit": "Edit",
+    "delete": "Delete",
+    "start_message": "Wave Start Message",
+    "count": "Count"
 }
