--- a/Script/Setting/Language/en-us.json
+++ b/Script/Setting/Language/en-us.json
@@ -714,5 +714,25 @@
     "directory": "Directory",
     "input_type": "Input type",
     "input_number_to_process_batch_function": "Input number to process batch function",
-    "input_directory": "Input directory"
+    "input_directory": "Input directory",
+    "pvz2.scg.exchange_custom_resource_info.invalid_convert": "Cannot convert resources type, got: {}",
+    "pvz2.scg.exchange_subgroup_compression_info.invalid_convert": "Cannot get resolution from the res-info, the provided resolution is not a number of string, got value: {}",
+    "popcap.animation.from_flash.frame_index_is_not_a_number": "Frame index is not a number, sprite: {}, value: {}",
+    "popcap.animation.from_flash.frame_duration_is_not_a_number": "Frame duration is not a number, sprite: {}, value: {}",
+    "popcap.animation.from_flash.animation_must_have_one_label": "Animation must have at least one label",
+    "popcap.animation.from_flash.label_length_does_not_match": "Label {} have frame length does not match",
+    "popcap.animation.from_flash.frame_index_is_not_a_integer": "Frame index is not a integer, got: {}",
+    "popcap.animation.from_flash.frame_duration_is_not_a_integer": "Frame duration is not a integer, got: {}",
+    "popcap.animation.from_flash.frame_rate_is_not_a_integer": "Frame rate is not a integer, got: {}",
+    "popcap.animation.from_flash.width_is_not_a_integer": "Width is not a integer, got: {}",
+    "popcap.animation.from_flash.height_is_not_a_integer": "Height is not a integer, got: {}",
+    "popcap.newton.invalid_res_type": "Invalid res type, expected an integer, got: {}",
+    "popcap.particles.invalid_emitter_image": "Invalid imitter image convert, expected an integer string",
+    "popcap.particles.invalid_argument": "Invalid {} convert, expected an number string",
+    "popcap.reanim.invalid_argument": "Invalid {} convert, expected an number string",
+    "popcap.animation.from_flash.transform_is_not_a_valid_number": "Transform property {} is not a correct number, got: {}",
+    "popcap.animation.from_flash.color_is_not_a_valid_number": "Color property {} is not a correct number, got: {}",
+    "popcap.animation.from_flash.matrix_is_not_a_valid_number": "Matrix property {} is not a correct number, got: {}",
+    "popcap.reanim.matrix_is_not_a_valid_number": "Matrix property {} is not a correct number, got: {}",
+    "popcap.rsb.unpack_cipher.cannot_convert_resolution": "Cannot convert resolution"
 }
