--- a/Modding/lib/l10n/app_en.arb
+++ b/Modding/lib/l10n/app_en.arb
@@ -105,11 +105,13 @@
     "successfully_applied_your_configuration": "Successfully applied your configuration!",
     "confirmation": "Confirmation",
     "confirm_apply_configuration": "Are you sure want to apply configuration?",
-    "backup_configuration": "Backup Confirmation",
+    "backup_configuration": "Backup Configuration",
+    "backup_configuration_description": "Backup your configuration before you lost it!",
     "upload_configuration": "Upload configuration",
     "save_configuration": "Save Configuration",
     "load_configuration": "Load Configuration",
     "apply_configuration": "Apply Configuration",
     "info": "Info",
-    "configuration_has_been_loaded": "Configuration has been loaded"
+    "configuration_has_been_loaded": "Configuration has been loaded",
+    "miscellaneous": "Miscellaneous"
 }
