--- a/Modding/lib/l10n/app_es.arb
+++ b/Modding/lib/l10n/app_es.arb
@@ -99,5 +99,24 @@
     "edit": "Edit",
     "delete": "Delete",
     "start_message": "Wave Start Message",
-    "count": "Count"
+    "count": "Count",
+    "detail": "Detail",
+    "done": "Done",
+    "successfully_applied_your_configuration": "Successfully applied your configuration!",
+    "confirmation": "Confirmation",
+    "confirm_apply_configuration": "Are you sure want to apply configuration?",
+    "backup_configuration": "Backup Configuration",
+    "backup_configuration_description": "Backup your configuration before you lost it!",
+    "upload_configuration": "Upload configuration",
+    "save_configuration": "Save Configuration",
+    "load_configuration": "Load Configuration",
+    "apply_configuration": "Apply Configuration",
+    "info": "Info",
+    "configuration_has_been_loaded": "Configuration has been loaded",
+    "miscellaneous": "Miscellaneous",
+    "parachute_rain": "Parachute Rain",
+    "value_cannot_be_null": "Value cannot be null",
+    "value_must_be_an_integer": "Value must be an integer",
+    "value_cannot_be_empty": "Value cannot be empty",
+    "fall_time": "Fall time"
 }
