--- a/Modding/lib/l10n/app_en.arb
+++ b/Modding/lib/l10n/app_en.arb
@@ -113,5 +113,11 @@
     "apply_configuration": "Apply Configuration",
     "info": "Info",
     "configuration_has_been_loaded": "Configuration has been loaded",
-    "miscellaneous": "Miscellaneous"
+    "miscellaneous": "Miscellaneous",
+    "parachute_rain": "Parachute Rain",
+    "value_cannot_be_null": "Value cannot be null",
+    "value_must_be_an_integer": "Value must be an integer",
+    "value_must_be_an_float": "Value must be an float",
+    "value_cannot_be_empty": "Value cannot be empty",
+    "fall_time": "Fall time"
 }
