--- a/Modding/lib/l10n/app_es.arb
+++ b/Modding/lib/l10n/app_es.arb
@@ -120,5 +120,7 @@
     "value_must_be_an_float": "Value must be an float",
     "value_cannot_be_empty": "Value cannot be empty",
     "fall_time": "Fall time",
-    "spider_rain": "Spider Rain"
+    "spider_rain": "Spider Rain",
+    "raiding_party": "Raiding Party",
+    "swashbuckler_count": "Swashbuckler Count"
 }
