--- a/Modding/lib/l10n/app_en.arb
+++ b/Modding/lib/l10n/app_en.arb
@@ -146,5 +146,9 @@
     "portal_row": "Portal Row",
     "portal_type": "Portal Type",
     "pick_a_portal": "Pick a portal",
-    "ground_spawn": "Ground Spawn"
+    "ground_spawn": "Ground Spawn",
+    "necromancy": "Necromancy",
+    "zombie_spawn_wait_time": "Zombie Spawn Wait Time",
+    "suppress_action_if_no_grid_items_found": "Suppress Action If No Grid Items Found",
+    "grid_type": "Grid Type"
 }
